# productmd

./: .gitignore  .travis.yml  AUTHORS  Containerfile.py36  MANIFEST.in  Makefile  PRODUCTMD-2.0-PLAN.md  README.md  TITO.md  codecov.yml  common.html  composeinfo-1.0.html  composeinfo.html  discinfo-1.0.html  discinfo.html  genindex.html  images-1.0.html  images.html  index.html  objects.inv  py-modindex.html  pyproject.toml  python-productmd.spec  rpms-1.0.html  rpms.html  ruff.toml  search.html  searchindex.js  setup.py  terminology.html  tox.ini  treeinfo-1.0.html  treeinfo.html  uv.toml
.github/workflows/: cd.yml  ci.yml  docs.yml  integration.yml  opencode-review.yml  sync-to-development.yml  tox.yml
.tito/: releasers.conf  tito.props
.tito/templates/: __init__.py.in
_sources/: composeinfo-1.0.txt  composeinfo.txt  discinfo-1.0.txt  images-1.0.txt  images.txt  rpms-1.0.txt  rpms.txt  treeinfo.txt
doc/: .readthedocs.yaml  Makefile  cli-downgrade.rst  cli-localize.rst  cli-upgrade.rst  cli-verify.rst  cli.rst  common.rst  compose.rst  composeinfo-1.0.rst  composeinfo-1.1.rst  composeinfo-2.0.rst  conf.py  discinfo.rst  distributed-composes.rst  extra_files-2.0.rst  extra_files.rst  images-1.0.rst  images-1.1.rst  images-2.0.rst  images.rst  index.rst  location.rst  migration-guide.rst  modules-2.0.rst  modules.rst  productmd-2.0.rst  rpms-1.0.rst  rpms-1.1.rst  rpms-2.0.rst  terminology.rst  treeinfo-1.0.rst  treeinfo-1.1.rst  treeinfo-1.2.rst  treeinfo.rst  version.rst
productmd/: __init__.py  common.py  compose.py  composeinfo.py  convert.py  discinfo.py  extra_files.py  images.py  localize.py  location.py  modules.py  oci.py  rpms.py  treeinfo.py  version.py
productmd/cli/: __init__.py  downgrade.py  localize.py  progress.py  upgrade.py  verify.py
schemas/: composeinfo-schema.json
scripts/: download-fedora-discinfo  download-fedora-treeinfo
tests/: README.md  mock_cli.py  test_cli.py  test_common.py  test_compose.py  test_compose_v2.py  test_composeinfo.py  test_composeinfo_v2.py  test_convert.py  test_discinfo.py  test_extra_files.py  test_extra_files_v2.py  test_header.py  test_images.py  test_images_v2.py  test_localize.py  test_location.py  test_modules.py  test_modules_v2.py  test_oci.py  test_rpms.py  test_rpms_v2.py  test_treeinfo.py  test_version.py
tests/compose/: composeinfo.json
tests/discinfo/: fedora-1.x86_64  fedora-10-Fedora.i386  fedora-10-Fedora.ppc  fedora-10-Fedora.x86_64  fedora-11-Everything.i386  fedora-11-Everything.ppc  fedora-11-Everything.x86_64  fedora-11-Fedora.i386  fedora-11-Fedora.ppc  fedora-11-Fedora.x86_64  fedora-12-Fedora.i386  fedora-12-Fedora.ppc  fedora-12-Fedora.x86_64  fedora-13-Fedora.i386  fedora-13-Fedora.x86_64  fedora-14-Fedora.i386  fedora-14-Fedora.x86_64  fedora-15-Fedora.i386  fedora-15-Fedora.x86_64  fedora-16-Everything.i386  fedora-16-Everything.x86_64  fedora-16-Fedora.i386  fedora-16-Fedora.x86_64  fedora-17-Fedora.i386  fedora-17-Fedora.x86_64  fedora-18-Everything.i386  fedora-18-Everything.x86_64  fedora-18-Fedora.i386  fedora-18-Fedora.x86_64  fedora-19-Fedora.i386  fedora-19-Fedora.x86_64  fedora-2.i386  fedora-2.x86_64  fedora-20-Fedora.armhfp  (+43 more)
(+89 files in other folders)
